--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.17.12",
         "@babel/plugin-transform-runtime": "^7.18.5",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "semantic-ui-react": "^2.1.3"
     }
 }
